# xiaomi-miloco

./: .dockerignore  .gitignore  README.md  README.zh.md  user_guide.md  user_guide_zh.md
knowledge/: README.md
knowledge/03-features/: hermes-plugin-integration.md
knowledge/05-external-deps/: sdk-hermes.md  sdk-openclaw.md
plugins/hermes/: README.md  __init__.py  agent_runner.py  bridge.py  catalog.py  config.py  cron_sync.py  hooks.py  pyproject.toml  schemas.py  tools.py  trace.py
plugins/hermes/dashboard/: api.py  manifest.json
plugins/hermes/integration-test/: .env.example  Dockerfile.hermes  README.md  docker-compose.yml  run_test.py
plugins/hermes/integration-test/config/: hermes-config.yaml
plugins/hermes/integration-test/scripts/: 01-miloco-backend.sh
plugins/hermes/scripts/: install_plugin.py
plugins/hermes/tests/: test_agent_runner.py  test_bridge.py  test_catalog.py  test_config.py  test_cron_sync.py  test_dashboard_api.py  test_schemas.py  test_tools.py
scripts/: install.py
