[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miloco-hermes-plugin"
version = "2.0.0"
description = "Xiaomi Miloco Hermes Agent plugin"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.100"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]
